--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -885,20 +885,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1101011101]\n",
-      "[1111110010]\n",
-      "[1101111001]\n",
-      "[10001010]\n",
-      "[111111010]\n",
-      "[1001100010]\n",
-      "[1001111111]\n"
+      "[1, 1, 0, 1, 0, 1, 1, 1, 0, 1]\n",
+      "[1, 1, 1, 1, 1, 1, 0, 0, 1, 0]\n",
+      "[1, 1, 0, 1, 1, 1, 1, 0, 0, 1]\n",
+      "[0, 0, 1, 0, 0, 0, 1, 0, 1, 0]\n",
+      "[0, 1, 1, 1, 1, 1, 1, 0, 1, 0]\n",
+      "[1, 0, 0, 1, 1, 0, 0, 0, 1, 0]\n",
+      "[1, 0, 0, 1, 1, 1, 1, 1, 1, 1]\n"
      ]
     }
    ],
@@ -906,13 +906,13 @@
     "from collections import deque\n",
     "\n",
     "input = open(\"data/dbn_bfs_01.txt\").readline\n",
-    "n, m = map(int, input().split())\n",
+    "n, m = map(int, input().rstrip().split())\n",
     "graph = []\n",
     "\n",
     "dx, dy = [-1, 1, 0, 0], [0, 0, -1, 1]\n",
     "\n",
     "for _ in range(n):\n",
-    "    graph.append(list(map(int, input().split())))\n",
+    "    graph.append(list(map(int, input().rstrip())))\n",
     "    \n",
     "for row in graph:\n",
     "    print(row)"
@@ -920,12 +920,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def bfs(x, y):\n",
-    "    global n, m    \n",
+    "    #global n, m    \n",
     "    queue = deque()\n",
     "    queue.append((x, y))    \n",
     "    while queue:\n",
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -963,19 +963,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\dfs_bfs.ipynb Cell 24\u001b[0m line \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dfs_bfs.ipynb#X31sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mprint\u001b[39m(bfs(\u001b[39m0\u001b[39;49m, \u001b[39m0\u001b[39;49m))\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\dfs_bfs.ipynb Cell 24\u001b[0m line \u001b[0;36mbfs\u001b[1;34m(x, y)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dfs_bfs.ipynb#X31sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mif\u001b[39;00m nx\u001b[39m<\u001b[39m\u001b[39m0\u001b[39m \u001b[39mor\u001b[39;00m nx\u001b[39m>\u001b[39m\u001b[39m=\u001b[39mn \u001b[39mor\u001b[39;00m ny\u001b[39m<\u001b[39m\u001b[39m0\u001b[39m \u001b[39mor\u001b[39;00m ny\u001b[39m>\u001b[39m\u001b[39m=\u001b[39mm:\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dfs_bfs.ipynb#X31sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     \u001b[39mcontinue\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dfs_bfs.ipynb#X31sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mif\u001b[39;00m graph[nx][ny] \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dfs_bfs.ipynb#X31sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     \u001b[39mcontinue\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dfs_bfs.ipynb#X31sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mif\u001b[39;00m graph[nx][ny] \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m:\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
      ]
     }
    ],
