BFS를 이용한 나동빈의 최단거리 구하기

--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -920,6 +920,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "chk = [[False] * m for _ in range(n)]\n",
+    "\n",
+    "for row in chk:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -946,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -959,6 +985,30 @@
    ],
    "source": [
     "print(bfs(0, 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 2, 0, 6, 0, 8, 9, 10, 0, 1]\n",
+      "[2, 3, 4, 5, 6, 7, 0, 0, 1, 0]\n",
+      "[3, 4, 0, 6, 7, 8, 9, 0, 0, 1]\n",
+      "[0, 0, 16, 0, 0, 0, 10, 0, 22, 0]\n",
+      "[0, 16, 15, 14, 13, 12, 11, 0, 21, 0]\n",
+      "[1, 0, 0, 15, 14, 0, 0, 0, 20, 0]\n",
+      "[1, 0, 0, 16, 15, 16, 17, 18, 19, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in graph:\n",
+    "    print(row)"
    ]
   }
  ],
