--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -946,6 +946,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bfs(x, y):\n",
+    "    #global n, m    \n",
+    "    queue = deque()\n",
+    "    queue.append((x, y))\n",
+    "    chk[x][y] = True    \n",
+    "    while queue:\n",
+    "        x, y = queue.popleft()\n",
+    "        for i in range(4):\n",
+    "            nx = x + dx[i]\n",
+    "            ny = y + dy[i]\n",
+    "            \n",
+    "            if nx<0 or nx>=n or ny<0 or ny>=m:\n",
+    "                continue\n",
+    "            if graph[nx][ny] == 0:\n",
+    "                continue\n",
+    "            if graph[nx][ny] == 1:\n",
+    "                graph[nx][ny] = graph[x][y] + 1\n",
+    "                queue.append((nx, ny))\n",
+    "    return graph[n-1][m-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -953,7 +980,8 @@
     "def bfs(x, y):\n",
     "    #global n, m    \n",
     "    queue = deque()\n",
-    "    queue.append((x, y))    \n",
+    "    queue.append((x, y))\n",
+    "       \n",
     "    while queue:\n",
     "        x, y = queue.popleft()\n",
     "        for i in range(4):\n",
