--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -950,11 +950,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def bfs(x, y):\n",
-    "    #global n, m    \n",
+    "def bfs(x, y):      \n",
     "    queue = deque()\n",
     "    queue.append((x, y))\n",
-    "    chk[x][y] = True    \n",
+    "    chk[x][y] = True  \n",
+    "      \n",
     "    while queue:\n",
     "        x, y = queue.popleft()\n",
     "        for i in range(4):\n",
@@ -965,9 +965,10 @@
     "                continue\n",
     "            if graph[nx][ny] == 0:\n",
     "                continue\n",
-    "            if graph[nx][ny] == 1:\n",
+    "            if graph[nx][ny] == 1 and not chk[nx][ny]:\n",
     "                graph[nx][ny] = graph[x][y] + 1\n",
     "                queue.append((nx, ny))\n",
+    "                chk[nx][ny] = True\n",
     "    return graph[n-1][m-1]"
    ]
   },
