--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -885,20 +885,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 1, 0, 1, 0, 1, 1, 1, 0, 1]\n",
-      "[1, 1, 1, 1, 1, 1, 0, 0, 1, 0]\n",
-      "[1, 1, 0, 1, 1, 1, 1, 0, 0, 1]\n",
-      "[0, 0, 1, 0, 0, 0, 1, 0, 1, 0]\n",
+      "[1, 1, 1, 1, 1, 1, 1, 1, 0, 1]\n",
+      "[0, 0, 1, 1, 0, 0, 1, 1, 1, 0]\n",
+      "[1, 1, 0, 0, 1, 1, 0, 1, 0, 1]\n",
+      "[1, 1, 1, 0, 1, 0, 1, 1, 1, 0]\n",
       "[0, 1, 1, 1, 1, 1, 1, 0, 1, 0]\n",
-      "[1, 0, 0, 1, 1, 0, 0, 0, 1, 0]\n",
-      "[1, 0, 0, 1, 1, 1, 1, 1, 1, 1]\n"
+      "[1, 0, 1, 0, 0, 0, 0, 0, 1, 0]\n",
+      "[1, 0, 1, 1, 1, 1, 1, 1, 1, 1]\n"
      ]
     }
    ],
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -942,6 +942,33 @@
     "\n",
     "for row in chk:\n",
     "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bfs(x, y):      \n",
+    "    queue = deque()\n",
+    "    queue.append((x, y)) \n",
+    "      \n",
+    "    while queue:\n",
+    "        x, y = queue.popleft()\n",
+    "        for i in range(4):\n",
+    "            nx = x + dx[i]\n",
+    "            ny = y + dy[i]\n",
+    "            \n",
+    "            if nx<0 or nx>=n or ny<0 or ny>=m:\n",
+    "                continue\n",
+    "            if graph[nx][ny] == 0:\n",
+    "                continue\n",
+    "            if graph[nx][ny] == 1:\n",
+    "                graph[nx][ny] = graph[x][y] + 1\n",
+    "                queue.append((nx, ny))\n",
+    "                \n",
+    "    return graph[n-1][m-1]"
    ]
   },
   {
