--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,7 @@
       "[1, 1, 0, 0, 1, 1, 0, 1, 0, 1]\n",
       "[1, 1, 1, 0, 1, 0, 1, 1, 1, 0]\n",
       "[0, 1, 1, 1, 1, 1, 1, 0, 1, 0]\n",
-      "[1, 0, 1, 0, 0, 0, 0, 0, 1, 0]\n",
+      "[1, 0, 1, 0, 0, 0, 0, 0, 0, 0]\n",
       "[1, 0, 1, 1, 1, 1, 1, 1, 1, 1]\n"
      ]
     }
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,7 +973,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bfs(0, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 2, 3, 4, 5, 6, 7, 8, 0, 1]\n",
+      "[0, 0, 4, 5, 0, 0, 8, 9, 10, 0]\n",
+      "[21, 20, 0, 0, 17, 18, 0, 10, 0, 1]\n",
+      "[20, 19, 18, 0, 16, 0, 12, 11, 12, 0]\n",
+      "[0, 18, 17, 16, 15, 14, 13, 0, 13, 0]\n",
+      "[1, 0, 18, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[1, 0, 19, 20, 21, 22, 23, 24, 25, 26]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in graph:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1001,14 +1045,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20\n"
+      "26\n"
      ]
     }
    ],
@@ -1018,20 +1062,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 0, 6, 0, 8, 9, 10, 0, 1]\n",
-      "[2, 3, 4, 5, 6, 7, 0, 0, 1, 0]\n",
-      "[3, 4, 0, 6, 7, 8, 9, 0, 0, 1]\n",
-      "[0, 0, 16, 0, 0, 0, 10, 0, 22, 0]\n",
-      "[0, 16, 15, 14, 13, 12, 11, 0, 21, 0]\n",
-      "[1, 0, 0, 15, 14, 0, 0, 0, 20, 0]\n",
-      "[1, 0, 0, 16, 15, 16, 17, 18, 19, 20]\n"
+      "[1, 2, 3, 4, 5, 6, 7, 8, 0, 1]\n",
+      "[0, 0, 4, 5, 0, 0, 8, 9, 10, 0]\n",
+      "[21, 20, 0, 0, 17, 18, 0, 10, 0, 1]\n",
+      "[20, 19, 18, 0, 16, 0, 12, 11, 12, 0]\n",
+      "[0, 18, 17, 16, 15, 14, 13, 0, 13, 0]\n",
+      "[1, 0, 18, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[1, 0, 19, 20, 21, 22, 23, 24, 25, 26]\n"
      ]
     }
    ],
@@ -1039,6 +1083,13 @@
     "for row in graph:\n",
     "    print(row)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
