--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -1086,10 +1086,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[True, True, True, True, True, True, True, True, False, False]\n",
+      "[False, False, True, True, False, False, True, True, True, False]\n",
+      "[True, True, False, False, True, True, False, True, False, False]\n",
+      "[True, True, True, False, True, False, True, True, True, False]\n",
+      "[False, True, True, True, True, True, True, False, True, False]\n",
+      "[False, False, True, False, False, False, False, False, False, False]\n",
+      "[False, False, True, True, True, True, True, True, True, True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in chk:\n",
+    "    print(row)"
+   ]
   }
  ],
  "metadata": {
