--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -1107,6 +1107,34 @@
     "for row in chk:\n",
     "    print(row)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bfs(x, y):      \n",
+    "    queue = deque()\n",
+    "    queue.append((x, y))\n",
+    "    chk[x][y] = True  \n",
+    "      \n",
+    "    while queue:\n",
+    "        x, y = queue.popleft()\n",
+    "        for i in range(4):\n",
+    "            nx = x + dx[i]\n",
+    "            ny = y + dy[i]\n",
+    "            \n",
+    "            if nx<0 or nx>=n or ny<0 or ny>=m:\n",
+    "                continue\n",
+    "            if graph[nx][ny] == 0:\n",
+    "                continue\n",
+    "            if graph[nx][ny] == 1 and not chk[nx][ny]:\n",
+    "                graph[nx][ny] = graph[x][y] + 1\n",
+    "                queue.append((nx, ny))\n",
+    "                chk[nx][ny] = True\n",
+    "    return graph[n-1][m-1]"
+   ]
   }
  ],
  "metadata": {
