More on dfs_bfs.ipynb

--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -1129,6 +1129,8 @@
     "                continue\n",
     "            if graph[nx][ny] == 0:\n",
     "                continue\n",
+    "            if chk[nx][ny]:\n",
+    "                continue\n",
     "            if graph[nx][ny] == 1 and not chk[nx][ny]:\n",
     "                graph[nx][ny] = graph[x][y] + 1\n",
     "                queue.append((nx, ny))\n",
