--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -1137,6 +1137,15 @@
     "                chk[nx][ny] = True\n",
     "    return graph[n-1][m-1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bfs(0, 0)"
+   ]
   }
  ],
  "metadata": {
