More on dfs_bfs.ipynb

--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,12 +1140,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bfs(0, 0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 0, 1]\n",
+      "[0, 0, 4, 5, 0, 0, 8, 9, 10, 0]\n",
+      "[21, 20, 0, 0, 17, 18, 0, 10, 0, 1]\n",
+      "[20, 19, 18, 0, 16, 0, 12, 11, 12, 0]\n",
+      "[0, 18, 17, 16, 15, 14, 13, 0, 13, 0]\n",
+      "[1, 0, 18, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[1, 0, 19, 20, 21, 22, 23, 24, 25, 26]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in graph:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[True, True, True, True, True, True, True, True, False, False]\n",
+      "[False, False, True, True, False, False, True, True, True, False]\n",
+      "[True, True, False, False, True, True, False, True, False, False]\n",
+      "[True, True, True, False, True, False, True, True, True, False]\n",
+      "[False, True, True, True, True, True, True, False, True, False]\n",
+      "[False, False, True, False, False, False, False, False, False, False]\n",
+      "[False, False, True, True, True, True, True, True, True, True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in chk:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
