--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +982,7 @@
        "26"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1017,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 1, 1, 1, 1, 1, 1, 0, 1]\n",
+      "[0, 0, 1, 1, 0, 0, 1, 1, 1, 0]\n",
+      "[1, 1, 0, 0, 1, 1, 0, 1, 0, 1]\n",
+      "[1, 1, 1, 0, 1, 0, 1, 1, 1, 0]\n",
+      "[0, 1, 1, 1, 1, 1, 1, 0, 1, 0]\n",
+      "[1, 0, 1, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[1, 0, 1, 1, 1, 1, 1, 1, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "input = open(\"data/dbn_bfs_01.txt\").readline\n",
+    "n, m = map(int, input().rstrip().split())\n",
+    "graph = []\n",
+    "\n",
+    "#dx, dy = [-1, 1, 0, 0], [0, 0, -1, 1]\n",
+    "dx, dy =  [0, 0, 1, -1], [1, -1, 0, 0]\n",
+    "\n",
+    "for _ in range(n):\n",
+    "    graph.append(list(map(int, input().rstrip())))\n",
+    "    \n",
+    "for row in graph:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1045,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1062,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
