More on dfs_bfs.ipynb

--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -920,33 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n"
-     ]
-    }
-   ],
-   "source": [
-    "chk = [[False] * m for _ in range(n)]\n",
-    "\n",
-    "for row in chk:\n",
-    "    print(row)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,40 +947,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "26"
+       "19"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bfs(0, 0)"
+    "bfs(0, 7)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bfs(2, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3, 2, 3, 4, 5, 6, 7, 8, 0, 1]\n",
-      "[0, 0, 4, 5, 0, 0, 8, 9, 10, 0]\n",
-      "[21, 20, 0, 0, 17, 18, 0, 10, 0, 1]\n",
-      "[20, 19, 18, 0, 16, 0, 12, 11, 12, 0]\n",
-      "[0, 18, 17, 16, 15, 14, 13, 0, 13, 0]\n",
-      "[1, 0, 18, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[1, 0, 19, 20, 21, 22, 23, 24, 25, 26]\n"
+      "[21, 20, 19, 18, 17, 16, 15, 14, 0, 1]\n",
+      "[0, 0, 20, 19, 0, 0, 14, 13, 14, 0]\n",
+      "[3, 2, 0, 0, 9, 10, 0, 12, 0, 1]\n",
+      "[2, 3, 4, 0, 8, 0, 10, 11, 12, 0]\n",
+      "[0, 4, 5, 6, 7, 8, 9, 0, 13, 0]\n",
+      "[1, 0, 6, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[1, 0, 7, 8, 9, 10, 11, 12, 13, 14]\n"
      ]
     }
    ],
@@ -1024,7 +1018,186 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 1, 1, 1, 1, 1, 1, 0, 1]\n",
+      "[0, 0, 1, 1, 0, 0, 1, 1, 1, 0]\n",
+      "[1, 1, 0, 0, 1, 1, 0, 1, 0, 1]\n",
+      "[1, 1, 1, 0, 1, 0, 1, 1, 1, 0]\n",
+      "[0, 1, 1, 1, 1, 1, 1, 0, 1, 0]\n",
+      "[1, 0, 1, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[1, 0, 1, 1, 1, 1, 1, 1, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "input = open(\"data/dbn_bfs_01.txt\").readline\n",
+    "n, m = map(int, input().rstrip().split())\n",
+    "graph = []\n",
+    "\n",
+    "dx, dy = [-1, 1, 0, 0], [0, 0, -1, 1]\n",
+    "#dx, dy =  [0, 0, 1, -1], [1, -1, 0, 0]\n",
+    "\n",
+    "for _ in range(n):\n",
+    "    graph.append(list(map(int, input().rstrip())))\n",
+    "    \n",
+    "for row in graph:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "chk = [[False] * m for _ in range(n)]\n",
+    "\n",
+    "for row in chk:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bfs(x, y):      \n",
+    "    queue = deque()\n",
+    "    queue.append((x, y))\n",
+    "    chk[x][y] = True  \n",
+    "      \n",
+    "    while queue:\n",
+    "        x, y = queue.popleft()\n",
+    "        for i in range(4):\n",
+    "            nx = x + dx[i]\n",
+    "            ny = y + dy[i]\n",
+    "            \n",
+    "            if nx<0 or nx>=n or ny<0 or ny>=m:\n",
+    "                continue\n",
+    "            if graph[nx][ny] == 0:\n",
+    "                continue\n",
+    "            if graph[nx][ny] == 1 and not chk[nx][ny]:\n",
+    "                graph[nx][ny] = graph[x][y] + 1\n",
+    "                queue.append((nx, ny))\n",
+    "                chk[nx][ny] = True\n",
+    "    return graph[n-1][m-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bfs(0, 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bfs(0, 7))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 1, 1, 1, 1, 1, 1, 0, 1]\n",
+      "[0, 0, 1, 1, 0, 0, 1, 1, 1, 0]\n",
+      "[1, 1, 0, 0, 1, 1, 0, 1, 0, 1]\n",
+      "[1, 1, 1, 0, 1, 0, 1, 1, 1, 0]\n",
+      "[0, 1, 1, 1, 1, 1, 1, 0, 1, 0]\n",
+      "[1, 0, 1, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[1, 0, 1, 1, 1, 1, 1, 1, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in graph:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[True, True, True, True, True, True, True, True, True, True]\n",
+      "[False, False, True, True, False, False, True, True, True, False]\n",
+      "[True, True, False, False, True, True, False, True, False, False]\n",
+      "[True, True, True, False, True, False, True, True, True, False]\n",
+      "[False, True, True, True, True, True, True, False, True, False]\n",
+      "[False, False, True, False, False, False, False, False, False, False]\n",
+      "[False, False, True, True, True, True, True, True, True, True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in chk:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1060,100 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def bfs(x, y):      \n",
-    "    queue = deque()\n",
-    "    queue.append((x, y))\n",
-    "    chk[x][y] = True  \n",
-    "      \n",
-    "    while queue:\n",
-    "        x, y = queue.popleft()\n",
-    "        for i in range(4):\n",
-    "            nx = x + dx[i]\n",
-    "            ny = y + dy[i]\n",
-    "            \n",
-    "            if nx<0 or nx>=n or ny<0 or ny>=m:\n",
-    "                continue\n",
-    "            if graph[nx][ny] == 0:\n",
-    "                continue\n",
-    "            if graph[nx][ny] == 1 and not chk[nx][ny]:\n",
-    "                graph[nx][ny] = graph[x][y] + 1\n",
-    "                queue.append((nx, ny))\n",
-    "                chk[nx][ny] = True\n",
-    "    return graph[n-1][m-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "26\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(bfs(0, 0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 4, 5, 6, 7, 8, 0, 1]\n",
-      "[0, 0, 4, 5, 0, 0, 8, 9, 10, 0]\n",
-      "[21, 20, 0, 0, 17, 18, 0, 10, 0, 1]\n",
-      "[20, 19, 18, 0, 16, 0, 12, 11, 12, 0]\n",
-      "[0, 18, 17, 16, 15, 14, 13, 0, 13, 0]\n",
-      "[1, 0, 18, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[1, 0, 19, 20, 21, 22, 23, 24, 25, 26]\n"
-     ]
-    }
-   ],
-   "source": [
-    "for row in graph:\n",
-    "    print(row)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[True, True, True, True, True, True, True, True, False, False]\n",
-      "[False, False, True, True, False, False, True, True, True, False]\n",
-      "[True, True, False, False, True, True, False, True, False, False]\n",
-      "[True, True, True, False, True, False, True, True, True, False]\n",
-      "[False, True, True, True, True, True, True, False, True, False]\n",
-      "[False, False, True, False, False, False, False, False, False, False]\n",
-      "[False, False, True, True, True, True, True, True, True, True]\n"
-     ]
-    }
-   ],
-   "source": [
-    "for row in chk:\n",
-    "    print(row)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1183,16 +1263,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "26"
+       "1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1203,20 +1283,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bfs(2, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4, 5, 6, 7, 8, 0, 1]\n",
-      "[0, 0, 4, 5, 0, 0, 8, 9, 10, 0]\n",
-      "[21, 20, 0, 0, 17, 18, 0, 10, 0, 1]\n",
-      "[20, 19, 18, 0, 16, 0, 12, 11, 12, 0]\n",
-      "[0, 18, 17, 16, 15, 14, 13, 0, 13, 0]\n",
-      "[1, 0, 18, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[1, 0, 19, 20, 21, 22, 23, 24, 25, 26]\n"
+      "[1, 1, 1, 1, 1, 1, 1, 1, 0, 1]\n",
+      "[0, 0, 1, 1, 0, 0, 1, 1, 1, 0]\n",
+      "[1, 1, 0, 0, 1, 1, 0, 1, 0, 1]\n",
+      "[1, 1, 1, 0, 1, 0, 1, 1, 1, 0]\n",
+      "[0, 1, 1, 1, 1, 1, 1, 0, 1, 0]\n",
+      "[1, 0, 1, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[1, 0, 1, 1, 1, 1, 1, 1, 1, 1]\n"
      ]
     }
    ],
@@ -1227,14 +1327,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[True, True, True, True, True, True, True, True, False, False]\n",
+      "[True, True, True, True, True, True, True, True, True, True]\n",
       "[False, False, True, True, False, False, True, True, True, False]\n",
       "[True, True, False, False, True, True, False, True, False, False]\n",
       "[True, True, True, False, True, False, True, True, True, False]\n",
