More on dfs_bfs.ipynb

--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1125,37 +1125,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "14\n"
      ]
     }
    ],
    "source": [
-    "print(bfs(0, 7))"
+    "print(bfs(2, 0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 1, 1, 1, 1, 1, 1, 1, 0, 1]\n",
-      "[0, 0, 1, 1, 0, 0, 1, 1, 1, 0]\n",
-      "[1, 1, 0, 0, 1, 1, 0, 1, 0, 1]\n",
-      "[1, 1, 1, 0, 1, 0, 1, 1, 1, 0]\n",
-      "[0, 1, 1, 1, 1, 1, 1, 0, 1, 0]\n",
-      "[1, 0, 1, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[1, 0, 1, 1, 1, 1, 1, 1, 1, 1]\n"
+      "[21, 20, 19, 18, 17, 16, 15, 14, 0, 1]\n",
+      "[0, 0, 20, 19, 0, 0, 14, 13, 14, 0]\n",
+      "[1, 2, 0, 0, 9, 10, 0, 12, 0, 1]\n",
+      "[2, 3, 4, 0, 8, 0, 10, 11, 12, 0]\n",
+      "[0, 4, 5, 6, 7, 8, 9, 0, 13, 0]\n",
+      "[1, 0, 6, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[1, 0, 7, 8, 9, 10, 11, 12, 13, 14]\n"
      ]
     }
    ],
@@ -1166,14 +1166,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[True, True, True, True, True, True, True, True, True, True]\n",
+      "[True, True, True, True, True, True, True, True, False, False]\n",
       "[False, False, True, True, False, False, True, True, True, False]\n",
       "[True, True, False, False, True, True, False, True, False, False]\n",
       "[True, True, True, False, True, False, True, True, True, False]\n",
@@ -1197,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1228,6 +1228,32 @@
     "    graph.append(list(map(int, input().rstrip())))\n",
     "    \n",
     "for row in graph:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "chk = [[False] * m for _ in range(n)]\n",
+    "\n",
+    "for row in chk:\n",
     "    print(row)"
    ]
   },
