--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1309,16 +1309,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "14"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1329,20 +1329,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 1, 1, 1, 1, 1, 1, 1, 0, 1]\n",
-      "[0, 0, 1, 1, 0, 0, 1, 1, 1, 0]\n",
-      "[1, 1, 0, 0, 1, 1, 0, 1, 0, 1]\n",
-      "[1, 1, 1, 0, 1, 0, 1, 1, 1, 0]\n",
-      "[0, 1, 1, 1, 1, 1, 1, 0, 1, 0]\n",
-      "[1, 0, 1, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[1, 0, 1, 1, 1, 1, 1, 1, 1, 1]\n"
+      "[21, 20, 19, 18, 17, 16, 15, 14, 0, 1]\n",
+      "[0, 0, 20, 19, 0, 0, 14, 13, 14, 0]\n",
+      "[1, 2, 0, 0, 9, 10, 0, 12, 0, 1]\n",
+      "[2, 3, 4, 0, 8, 0, 10, 11, 12, 0]\n",
+      "[0, 4, 5, 6, 7, 8, 9, 0, 13, 0]\n",
+      "[1, 0, 6, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[1, 0, 7, 8, 9, 10, 11, 12, 13, 14]\n"
      ]
     }
    ],
@@ -1353,14 +1353,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[True, True, True, True, True, True, True, True, True, True]\n",
+      "[True, True, True, True, True, True, True, True, False, False]\n",
       "[False, False, True, True, False, False, True, True, True, False]\n",
       "[True, True, False, False, True, True, False, True, False, False]\n",
       "[True, True, True, False, True, False, True, True, True, False]\n",
@@ -1374,13 +1374,6 @@
     "for row in chk:\n",
     "    print(row)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
