dbn_parametric_search.ipynb

--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -21,10 +21,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def binary_search_while(array, target, start, end):\n",
+    "    if start > end:\n",
+    "        return None\n",
+    "    while start <= end:\n",
+    "        mid = (start + end) // 2\n",
+    "        if target == array[mid]:\n",
+    "            return mid\n",
+    "        elif target < array[mid]:\n",
+    "            end = mid - 1\n",
+    "        else:\n",
+    "            start = mid + 1"
+   ]
   }
  ],
  "metadata": {
