dbn_parametric_search.ipynb

--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -37,6 +37,29 @@
     "        else:\n",
     "            start = mid + 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'randint' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_parametric_search.ipynb Cell 3\u001b[0m line \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_parametric_search.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m randint(\u001b[39m10\u001b[39m, \u001b[39m3\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'randint' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "ary = list(map(int, input().split()))  # 7 5 88 9 0 -24 3 1 6 2 4 8\n",
+    "ary.sort()\n",
+    "print(ary)"
+   ]
   }
  ],
  "metadata": {
