dbn_parametric_search.ipynb

--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -52,9 +52,18 @@
     }
    ],
    "source": [
-    "ary = list(map(int, input().split()))  # 7 5 88 9 0 -24 3 1 6 2 4 8\n",
+    "ary = list(map(int, input().split()))  # 70 5 88 19 0 -24 35 1 62 2 43 8\n",
     "ary.sort()\n",
     "print(ary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "binary_search(ary, )"
    ]
   }
  ],
