--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -40,14 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-24, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 88]\n"
+      "[-24, 0, 1, 2, 5, 8, 19, 35, 43, 62, 70, 88]\n"
      ]
     }
    ],
@@ -59,11 +59,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "binary_search(ary, )"
+    "binary_search(ary, 19, 0, len(ary)-1)"
    ]
   }
  ],
