dbn_parametric_search.ipynb

--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -76,6 +76,26 @@
    "source": [
     "binary_search(ary, 19, 0, len(ary)-1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binary_search_while(ary, 19, 0, len(ary)-1)"
+   ]
   }
  ],
  "metadata": {
