--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -96,6 +96,27 @@
    "source": [
     "binary_search_while(ary, 19, 0, len(ary)-1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2047447438.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [9]\u001b[1;36m\u001b[0m\n\u001b[1;33m    rice_array = list(map(int, input()split()))\u001b[0m\n\u001b[1;37m                                      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "n, m = map(int, input().split())    #4 6\n",
+    "rice_array = list(map(int, input()split()))\n",
+    "print(f\"n : {n}, m : {m}\")\n",
+    "print(f\"rice_array : {rice_array}\")"
+   ]
   }
  ],
  "metadata": {
