--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -99,23 +99,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2047447438.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [9]\u001b[1;36m\u001b[0m\n\u001b[1;33m    rice_array = list(map(int, input()split()))\u001b[0m\n\u001b[1;37m                                      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n : 4, m : 6\n",
+      "rice_array : [10, 19, 15, 17]\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n"
      ]
     }
    ],
    "source": [
     "n, m = map(int, input().split())    #4 6\n",
-    "rice_array = list(map(int, input()split()))\n",
+    "rice_array = list(map(int, input().split()))\n",
     "print(f\"n : {n}, m : {m}\")\n",
-    "print(f\"rice_array : {rice_array}\")"
+    "print(f\"rice_array : {rice_array}\")\n",
+    "\n",
+    "param_list = [i for i in range(max(rice_array)+1)]\n",
+    "print(param_list)"
    ]
   }
  ],
