dbn_parametric_search.ipynb

--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -121,6 +121,27 @@
     "param_list = [i for i in range(max(rice_array)+1)]\n",
     "print(param_list)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def measure_rice(cutting_lnth):\n",
+    "    rice_sum = 0\n",
+    "    for x in rice_array:\n",
+    "        if x > cutting_lnth:\n",
+    "           rice_sum + x - cutting_lnth\n",
+    "    return rice_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
