dbn_parametric_search.ipynb

--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,16 +132,29 @@
     "    rice_sum = 0\n",
     "    for x in rice_array:\n",
     "        if x > cutting_lnth:\n",
-    "           rice_sum + x - cutting_lnth\n",
+    "           rice_sum += (x - cutting_lnth)\n",
     "    return rice_sum"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "measure_rice(15)"
+   ]
   }
  ],
  "metadata": {
