--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -99,6 +99,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def binary_search(array, target, start, end):\n",
+    "    if start > end : \n",
+    "        return None\n",
+    "    mid = (start + end) // 2\n",
+    "    if target == array[mid]:\n",
+    "        return mid\n",
+    "    elif target < array[mid]:\n",
+    "        return binary_search(array, target, start, mid-1)\n",
+    "    else:\n",
+    "        return binary_search(array, target, mid+1, end)\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def binary_search_while(array, target, start, end):\n",
+    "    if start > end:\n",
+    "        return None\n",
+    "    while start <= end:\n",
+    "        mid = (start + end) // 2\n",
+    "        if target == array[mid]:\n",
+    "            return mid\n",
+    "        elif target < array[mid]:\n",
+    "            end = mid - 1\n",
+    "        else:\n",
+    "            start = mid + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -138,22 +190,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "2"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "measure_rice(15)"
+    "measure_rice(17)"
    ]
   }
  ],
