dbn_parametric_search.ipynb

--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -2,117 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def binary_search(array, target, start, end):\n",
-    "    if start > end : \n",
-    "        return None\n",
-    "    mid = (start + end) // 2\n",
-    "    if target == array[mid]:\n",
-    "        return mid\n",
-    "    elif target < array[mid]:\n",
-    "        return binary_search(array, target, start, mid-1)\n",
-    "    else:\n",
-    "        return binary_search(array, target, mid+1, end)\n",
-    "    return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def binary_search_while(array, target, start, end):\n",
-    "    if start > end:\n",
-    "        return None\n",
-    "    while start <= end:\n",
-    "        mid = (start + end) // 2\n",
-    "        if target == array[mid]:\n",
-    "            return mid\n",
-    "        elif target < array[mid]:\n",
-    "            end = mid - 1\n",
-    "        else:\n",
-    "            start = mid + 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-24, 0, 1, 2, 5, 8, 19, 35, 43, 62, 70, 88]\n"
-     ]
-    }
-   ],
-   "source": [
-    "ary = list(map(int, input().split()))  # 70 5 88 19 0 -24 35 1 62 2 43 8\n",
-    "ary.sort()\n",
-    "print(ary)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "binary_search(ary, 19, 0, len(ary)-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "binary_search_while(ary, 19, 0, len(ary)-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
@@ -190,22 +79,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[61, 57, 53, 49, 45, 41, 37, 33, 29, 25, 21, 18, 15, 12, 9, 6, 4, 2, 1, 0]\n"
+     ]
     }
    ],
    "source": [
-    "measure_rice(17)"
+    "my_rice = [measure_rice(x) for x in param_list]\n",
+    "print(my_rice)"
    ]
   }
  ],
