dbn_parametric_search.ipynb

--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
     }
    ],
    "source": [
-    "n, m = map(int, input().split())    #4 6\n",
+    "n, m = map(int, input().split())    # n : 떡의 개수,  m : 내가 가져가야 할 떡의 총 길이\n",
     "rice_array = list(map(int, input().split()))\n",
     "print(f\"n : {n}, m : {m}\")\n",
     "print(f\"rice_array : {rice_array}\")\n",
