dbn_parametric_search.ipynb

--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -48,38 +48,38 @@
      "output_type": "stream",
      "text": [
       "n : 4, m : 6\n",
-      "rice_array : [10, 19, 15, 17]\n",
+      "rice_array : [19, 15, 10, 17]\n",
       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n"
      ]
     }
    ],
    "source": [
-    "n, m = map(int, input().split())    # n : 떡의 개수,  m : 내가 가져가야 할 떡의 총 길이\n",
-    "rice_array = list(map(int, input().split()))\n",
+    "n, m = map(int, input().split())    # n : 떡의 개수,  m : 내가 가져가야 할 떡의 총 길이    (4  6)\n",
+    "rices = list(map(int, input().split()))    # 방아간에 있는 떡들의 길이(n개)          (19 15 10 17)\n",
     "print(f\"n : {n}, m : {m}\")\n",
-    "print(f\"rice_array : {rice_array}\")\n",
+    "print(f\"rice_array : {rices}\")\n",
     "\n",
-    "param_list = [i for i in range(max(rice_array)+1)]\n",
-    "print(param_list)"
+    "cutting_lengths = [i for i in range(max(rices)+1)]\n",
+    "print(cutting_lengths)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def measure_rice(cutting_lnth):\n",
+    "def measure_rice(cl):\n",
     "    rice_sum = 0\n",
-    "    for x in rice_array:\n",
-    "        if x > cutting_lnth:\n",
-    "           rice_sum += (x - cutting_lnth)\n",
+    "    for x in rices:\n",
+    "        if x > cl:\n",
+    "           rice_sum += (x - cl)\n",
     "    return rice_sum"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -91,8 +91,26 @@
     }
    ],
    "source": [
-    "my_rice = [measure_rice(x) for x in param_list]\n",
+    "my_rice = [measure_rice(x) for x in cutting_lengths]\n",
     "print(my_rice)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, False, False, False, False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_rice_chk = [i >= m for i in my_rice]\n",
+    "print(my_rice_chk)"
    ]
   }
  ],
