dbn_parametric_search.ipynb

--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -112,6 +112,33 @@
     "my_rice_chk = [i >= m for i in my_rice]\n",
     "print(my_rice_chk)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binary_search(sorted(my_rice, reverse=False), m, 0, len(my_rice)-1)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
