--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -40,15 +40,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n : 4, m : 6\n",
-      "rice_array : [19, 15, 10, 17]\n",
+      "n : 6, m : 4\n",
+      "rice_array : [19, 10, 12, 15, 11, 18]\n",
       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n"
      ]
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,14 +79,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reverse_binary_search(array, target, start, end):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[61, 57, 53, 49, 45, 41, 37, 33, 29, 25, 21, 18, 15, 12, 9, 6, 4, 2, 1, 0]\n"
+      "[85, 79, 73, 67, 61, 55, 49, 43, 37, 31, 25, 20, 16, 13, 10, 7, 5, 3, 1, 0]\n"
      ]
     }
    ],
@@ -97,14 +106,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, False, False, False, False]\n"
+      "16\n",
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "k = 0\n",
+    "while True:\n",
+    "    if my_rice[k] >= m:\n",
+    "        k += 1\n",
+    "    else:\n",
+    "        break\n",
+    "print(k-1)\n",
+    "print(cutting_lengths[k-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, False, False, False]\n"
      ]
     }
    ],
@@ -115,41 +149,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
-     ]
-    }
-   ],
-   "source": [
-    "idx = binary_search(sorted(my_rice, reverse=False), m, 0, len(my_rice)-1)    \n",
-    "print(idx)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "15"
+       "6"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sorted(cutting_lengths, reverse=True)[idx]"
+    "my_list = [12, 17, 9, 23, 7, 8, 3, 10, 15, 19]\n",
+    "binary_search(sorted(my_list), 15, 0, len(my_list)-1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
