--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -40,15 +40,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n : 6, m : 4\n",
-      "rice_array : [19, 10, 12, 15, 11, 18]\n",
+      "n : 4, m : 6\n",
+      "rice_array : [19, 15, 10, 17]\n",
       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n"
      ]
     }
@@ -79,11 +79,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def reverse_binary_search(array, target, start, end):"
+    "def reverse_binary_search(array, target, start, end):\n",
+    "    if start > end:\n",
+    "        return None\n",
+    "    mid = (start + end) // 2\n",
+    "    if target == array[mid]:\n",
+    "        return mid\n",
+    "    elif target < array[mid]:\n",
+    "        reverse_binary_search(array, target, mid+1, end)\n",
+    "    else:\n",
+    "        reverse_binary_search(array, target, start, mid-1)\n",
+    "    return None"
    ]
   },
   {
