reverse_binary_search

--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -65,11 +65,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def measure_rice(cl):\n",
+    "def measure_rice(cl):  # cl : cutting limit\n",
     "    rice_sum = 0\n",
     "    for x in rices:\n",
     "        if x > cl:\n",
