reverse_binary_search

--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,20 +98,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[85, 79, 73, 67, 61, 55, 49, 43, 37, 31, 25, 20, 16, 13, 10, 7, 5, 3, 1, 0]\n"
+      "[61, 57, 53, 49, 45, 41, 37, 33, 29, 25, 21, 18, 15, 12, 9, 6, 4, 2, 1, 0]\n"
      ]
     }
    ],
    "source": [
     "my_rice = [measure_rice(x) for x in cutting_lengths]\n",
     "print(my_rice)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "maximum length of rice to guarantee a customer 6 inches of rice : 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "k = 0\n",
+    "\n",
+    "while True:\n",
+    "    if measure_rice(k) >= m:\n",
+    "        k +=1\n",
+    "    else:\n",
+    "        break\n",
+    "\n",
+    "cutting_limit = cutting_lengths[k-1]\n",
+    "print(f\"maximum length of rice to guarantee a customer {m} inches of rice : {cutting_limit}\")"
    ]
   },
   {
