--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -59,6 +59,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reverse_binary_search_while(array, target, start, end):\n",
+    "    if start > end:\n",
+    "        return None\n",
+    "    mid = (start + end) // 2\n",
+    "    if target == array[mid]:\n",
+    "        return mid\n",
+    "    elif target < array[mid]:\n",
+    "        start = mid + 1\n",
+    "    else:\n",
+    "        end = mid - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -112,6 +130,35 @@
    "source": [
     "my_rice = [measure_rice(x) for x in cutting_lengths]\n",
     "print(my_rice)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reverse_binary_search(my_rice, 6, 0, len(my_rice)-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reverse_binary_search(array, target, start, end):\n",
+    "    if start > end:\n",
+    "        return None\n",
+    "    mid = (start + end) // 2\n",
+    "    print(mid)\n",
+    "    if target == array[mid]:\n",
+    "        return mid\n",
+    "    elif target < array[mid]:\n",
+    "        reverse_binary_search(array, target, mid+1, end)\n",
+    "    else:\n",
+    "        reverse_binary_search(array, target, start, mid-1)\n",
+    "    return None"
    ]
   },
   {
