--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -66,13 +66,15 @@
     "def reverse_binary_search_while(array, target, start, end):\n",
     "    if start > end:\n",
     "        return None\n",
-    "    mid = (start + end) // 2\n",
-    "    if target == array[mid]:\n",
-    "        return mid\n",
-    "    elif target < array[mid]:\n",
-    "        start = mid + 1\n",
-    "    else:\n",
-    "        end = mid - 1"
+    "    while start <= end:\n",
+    "        mid = (start + end) // 2\n",
+    "        print(mid)\n",
+    "        if target == array[mid]:\n",
+    "            return mid\n",
+    "        elif target < array[mid]:\n",
+    "            start = mid + 1\n",
+    "        else:\n",
+    "            end = mid - 1"
    ]
   },
   {
@@ -134,11 +136,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "14\n",
+      "17\n",
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "reverse_binary_search(my_rice, 6, 0, len(my_rice)-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "reverse_binary_search(my_rice, 6, 0, len(my_rice)-1)"
+    "reverse_binary_search_while(my_rice, m, 0, len(my_rice)-1)"
    ]
   },
   {
